src/test/ui/span/issue-27522.stderr
error[E0307]: invalid method receiver type: &SomeType
  --> $DIR/issue-27522.rs:6:22
   |
LL |     fn handler(self: &SomeType);
   |                      ^^^^^^^^^
   |
   = note: type must be `Self` or a type that dereferences to it
   = help: consider changing to `self`, `&self`, `&mut self`, or `self: Box<Self>`

error: aborting due to previous error

